<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="net.itca.dwm.android.activities.MenuActivity"
    android:background="@color/background" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/menu_Menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/MenuTitle"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/menu_ViewInvites"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="InvitesClick"
            android:text="@string/InvitesTitle" />

        <Button
            android:id="@+id/menu_ViewFriends"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="FriendsClick"
            android:text="@string/FriendTitle" />

        <Button
            android:id="@+id/menu_ViewRecipes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="RecipesClick"
            android:text="@string/RecipeTitle" />
        
        
        <Button
            android:id="@+id/menu_ViewEvents"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="EventsClick"
            android:text="@string/EventTitle" />
        
          
        <Button
            android:id="@+id/menu_Logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="LogoutClick"
            android:text="@string/LogoutButton" />
    </LinearLayout>

</ScrollView>