<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="net.itca.dwm.android.activities.EventDetailsActivity" 
    android:background="@color/background">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/EventDetailsName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/EventName"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/EventDetailsHost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/host"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/EventDetailsRecipe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/RecipeForEvent"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/EventDetailsDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/EventDate"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/EventDetailsTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/EventTime"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/EventDetailsDeclineButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="DeclineClick"
                android:text="@string/DeclineButton"
                android:background="@color/declinebutton" />

            <Button
                android:id="@+id/EventDetailsAcceptButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="AcceptClick"
                android:text="@string/AcceptButton" 
                android:background="@color/acceptbutton"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
