<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="net.itca.dwm.android.activities.FriendDetailsActivity" 
    android:background="@color/background">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/FriendDetailsUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/FriendUsername"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/FriendDetailsFirstname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Firstname"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/FriendDetailsLastname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Lastname"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/DeclineButton"
                android:onClick="DeclineClick" 
                android:background="@color/declinebutton"/>

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/AcceptButton"
                android:onClick="AcceptClick"
                android:background="@color/acceptbutton" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
