<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="net.itca.dwm.android.activities.AddRecipeActivity"
    android:background="@color/background" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/RecipeName"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/dynAddRecipeTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10" >

                <requestFocus />
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/AmountOfPeople"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/RecipePeople"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/dynAddRecipePeople"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10" />
        </LinearLayout>

        <TextView
            android:id="@+id/textviewingredients"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/RecipeIngredients"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/AddRecipeIngredients"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:ems="10"
            android:inputType="textMultiLine" />

        <TextView
            android:id="@+id/textviewinstructions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/RecipeInstructions"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/AddRecipeInstructions"
            android:layout_width="281dp"
            android:layout_height="118dp"
            android:ems="10"
            android:inputType="textMultiLine" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <!-- Maybe just click -> open new page -> share as tweet? -->

            <Button
                android:id="@+id/RecipeTakePictureButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="PicClick"
                android:text="@string/PictureButton" />
        </LinearLayout>

        <Button
            android:id="@+id/RecipeSaveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="SaveClick"
            android:text="@string/SaveButton" />
    </LinearLayout>

</ScrollView>