<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="net.itca.dwm.android.activities.EventActivity" 
    android:background="@color/background">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Hosting"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Button
                android:id="@+id/NavigateAddEvent"
                android:layout_width="49dp"
                android:layout_height="wrap_content"
                android:background="@android:color/holo_green_light"
                android:onClick="EventClick"
                android:text="@string/AddButton"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <ListView
            android:id="@+id/EventMyEventList"
            android:layout_width="match_parent"
            android:layout_height="191dp" 
            android:background="@color/list" >
        </ListView>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Attending"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ListView
            android:id="@+id/EventAcceptedEvents"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/list"  >
        </ListView>
    </LinearLayout>

</RelativeLayout>